--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chronos 數位觀課儀表板</title>
+    <!-- 核心套件：Tailwind, React, ReactDOM, Babel -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -58,15 +62,280 @@
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+
+    <script type="text/babel">
+        const { useState, useEffect, useCallback, useRef } = React;
+
+        // --- Types & Constants ---
+        const TeachingMode = {
+            LECTURE: '講述教學',
+            DISCUSSION: '小組討論',
+            PRACTICE: '實作/演算',
+            DIGITAL: '數位運用'
+        };
+
+        const TeachingAction = {
+            ENCOURAGEMENT: '正向鼓勵',
+            CORRECTION: '糾正規範',
+            OPEN_Q: '開放提問',
+            CLOSED_Q: '封閉提問',
+            PATROL: '巡視走動'
+        };
+
+        // --- Components: Icons ---
+        const StartIcon = ({ className }) => (
+            <svg viewBox="0 0 100 100" className={className}>
+                <defs>
+                    <linearGradient id="grad-gold" x1="0%" y1="0%" x2="100%" y2="100%">
+                        <stop offset="0%" style={{ stopColor: '#fef3c7', stopOpacity: 1 }} />
+                        <stop offset="100%" style={{ stopColor: '#d97706', stopOpacity: 1 }} />
+                    </linearGradient>
+                </defs>
+                <circle cx="50" cy="50" r="45" fill="none" stroke="url(#grad-gold)" strokeWidth="1" strokeDasharray="4 4" className="animate-rotate-slow" />
+                <polygon points="40,30 75,50 40,70" fill="url(#grad-gold)" />
+            </svg>
+        );
+
+        const StopIcon = ({ className }) => (
+            <svg viewBox="0 0 100 100" className={className}>
+                <defs>
+                    <linearGradient id="grad-rust" x1="0%" y1="0%" x2="100%" y2="100%">
+                        <stop offset="0%" style={{ stopColor: '#ef4444', stopOpacity: 1 }} />
+                        <stop offset="100%" style={{ stopColor: '#7f1d1d', stopOpacity: 1 }} />
+                    </linearGradient>
+                </defs>
+                <rect x="25" y="25" width="50" height="50" rx="4" fill="url(#grad-rust)" />
+                <path d="M20 10 L30 10 L30 90 L20 90 Z" fill="#7f1d1d" opacity="0.5" />
+                <path d="M70 10 L80 10 L80 90 L70 90 Z" fill="#7f1d1d" opacity="0.5" />
+            </svg>
+        );
+
+        // --- Components: Summary Modal ---
+        const SummaryModal = ({ session, subject, onClose, onReset }) => {
+            const formatDuration = (seconds) => {
+                const mins = Math.floor(seconds / 60);
+                const secs = seconds % 60;
+                return `${mins}分 ${secs}秒`;
+            };
+
+            const getFormattedReport = () => {
+                const header = `【Chronos 數位觀課報告】\n科目: ${subject}\n日期: ${new Date().toLocaleDateString('zh-TW')}\n時間: ${session.startTime?.toLocaleTimeString('zh-TW', { hour12: false })} - ${session.endTime?.toLocaleTimeString('zh-TW', { hour12: false })}\n\n`;
+                let modesReport = "== [1] 教學模式累計時間 ==\n";
+                Object.entries(session.modeDurations).forEach(([mode, duration]) => {
+                    modesReport += `${mode}: ${formatDuration(duration)}\n`;
+                });
+                let actionsReport = "\n== [2] 教學行為細節統計 (次數 與 持續時間) ==\n";
+                Object.values(TeachingAction).forEach(action => {
+                    actionsReport += `${action}: ${session.actionCounts[action]} 次 | 累計時間: ${formatDuration(session.actionDurations[action])}\n`;
+                });
+                let logReport = "\n== [3] 詳細紀錄流 ==\n";
+                session.logs.forEach(log => {
+                    logReport += `[${log.timestamp.toLocaleTimeString('zh-TW', { hour12: false })}] ${log.label}${log.value ? `: ${log.value}` : ''}\n`;
+                });
+                return header + modesReport + actionsReport + logReport;
+            };
+
+            return (
+                <div className="fixed inset-0 z-50 flex items-center justify-center p-4">
+                    <div className="absolute inset-0 bg-slate-950/80 backdrop-blur-sm" onClick={onClose}></div>
+                    <div className="glass-panel w-full max-w-4xl max-h-[90vh] rounded-3xl overflow-hidden flex flex-col z-10 border border-amber-500/30 shadow-2xl shadow-black">
+                        <div className="p-6 border-b border-amber-500/20 flex justify-between items-center klimt-gradient text-white">
+                            <h2 className="text-2xl font-bold tracking-widest uppercase">觀課總結報告</h2>
+                            <button onClick={onClose} className="p-2 hover:bg-white/10 rounded-full">✕</button>
+                        </div>
+                        <div className="flex-1 overflow-y-auto p-8 grid grid-cols-1 md:grid-cols-2 gap-8 bg-slate-950">
+                            <div className="space-y-6 text-slate-300">
+                                <h3 className="text-amber-500 font-bold border-b border-amber-500/20 pb-2">基本資訊</h3>
+                                <p>科目：{subject}</p>
+                                <p>起始：{session.startTime?.toLocaleTimeString('zh-TW', { hour12: false })}</p>
+                                <p>結束：{session.endTime?.toLocaleTimeString('zh-TW', { hour12: false })}</p>
+                                <h3 className="text-amber-500 font-bold border-b border-amber-500/20 pb-2">教學模式</h3>
+                                {Object.entries(session.modeDurations).map(([mode, d]) => (
+                                    <div key={mode} className="flex justify-between bg-slate-900 p-2 rounded"><span>{mode}</span><span className="font-mono text-amber-400">{formatDuration(d)}</span></div>
+                                ))}
+                            </div>
+                            <div className="space-y-4">
+                                <h3 className="text-amber-500 font-bold border-b border-amber-500/20 pb-2 text-slate-300">行為細節</h3>
+                                {Object.values(TeachingAction).map(action => (
+                                    <div key={action} className="bg-slate-900 p-3 rounded flex justify-between items-center">
+                                        <div><p className="text-xs text-slate-500">{action}</p><p className="text-amber-400 font-bold">{session.actionCounts[action]} 次</p></div>
+                                        <div className="text-right font-mono text-blue-400 text-sm">{formatDuration(session.actionDurations[action])}</div>
+                                    </div>
+                                ))}
+                            </div>
+                        </div>
+                        <div className="p-6 bg-slate-900 flex gap-4 justify-end">
+                            <button onClick={() => { navigator.clipboard.writeText(getFormattedReport()); alert('已複製'); }} className="px-4 py-2 border border-amber-500 text-amber-500 rounded-lg">複製紀錄</button>
+                            <button onClick={onReset} className="px-4 py-2 bg-red-800 rounded-lg">重置並開始新場次</button>
+                        </div>
+                    </div>
+                </div>
+            );
+        };
+
+        // --- Main App Component ---
+        const App = () => {
+            const [session, setSession] = useState({
+                isActive: false, startTime: null, endTime: null, currentMode: null, currentAction: null,
+                modeDurations: Object.fromEntries(Object.values(TeachingMode).map(m => [m, 0])),
+                actionCounts: Object.fromEntries(Object.values(TeachingAction).map(a => [a, 0])),
+                actionDurations: Object.fromEntries(Object.values(TeachingAction).map(a => [a, 0])),
+                logs: [], engagement: 'MID', lastActivity: Date.now()
+            });
+            const [subject, setSubject] = useState('國文');
+            const [showSummary, setShowSummary] = useState(false);
+            const [isIdle, setIsIdle] = useState(false);
+            const [currentTime, setCurrentTime] = useState(new Date());
+            const timerRef = useRef(null);
+            const longPressTimer = useRef(null);
+
+            useEffect(() => {
+                const clock = setInterval(() => setCurrentTime(new Date()), 1000);
+                return () => clearInterval(clock);
+            }, []);
+
+            useEffect(() => {
+                if (session.isActive) {
+                    timerRef.current = setInterval(() => {
+                        setSession(prev => {
+                            const newState = { ...prev };
+                            if (prev.currentMode) newState.modeDurations[prev.currentMode]++;
+                            if (prev.currentAction) newState.actionDurations[prev.currentAction]++;
+                            if (Date.now() - prev.lastActivity > 300000) setIsIdle(true);
+                            return newState;
+                        });
+                    }, 1000);
+                } else {
+                    clearInterval(timerRef.current);
+                }
+                return () => clearInterval(timerRef.current);
+            }, [session.isActive]);
+
+            const log = (type, label, value) => {
+                setSession(prev => ({
+                    ...prev, lastActivity: Date.now(),
+                    logs: [...prev.logs, { id: Math.random().toString(36).substr(2, 9), timestamp: new Date(), type, label, value }].slice(-50)
+                }));
+                setIsIdle(false);
+            };
+
+            const toggleMode = (mode) => {
+                if (!session.isActive) return;
+                const isSwitching = session.currentMode !== mode;
+                log('MODE_CHANGE', isSwitching ? `切換模式: ${mode}` : `停止模式: ${mode}`);
+                setSession(prev => ({ ...prev, currentMode: isSwitching ? mode : null }));
+            };
+
+            const handleActionStart = (action) => {
+                if (!session.isActive) return;
+                longPressTimer.current = setTimeout(() => {
+                    const isStarting = session.currentAction !== action;
+                    log('ACTION_TIMER', isStarting ? `開始計時: ${action}` : `停止計時: ${action}`);
+                    setSession(prev => ({ ...prev, currentAction: isStarting ? action : null }));
+                    longPressTimer.current = null;
+                }, 600);
+            };
+
+            const handleActionEnd = (action) => {
+                if (longPressTimer.current) {
+                    clearTimeout(longPressTimer.current);
+                    log('ACTION', `行為次數: ${action}`);
+                    setSession(prev => ({ ...prev, actionCounts: { ...prev.actionCounts, [action]: prev.actionCounts[action] + 1 } }));
+                }
+            };
+
+            return (
+                <div className="flex flex-col h-screen w-full relative bg-slate-950 text-slate-100 select-none overflow-hidden">
+                    {/* Header */}
+                    <header className="glass-panel h-20 px-6 flex items-center justify-between z-10 border-b border-amber-500/20 shrink-0">
+                        <div className="flex items-center gap-4">
+                            <h1 className="text-xl font-bold tracking-widest text-amber-500">CHRONOS</h1>
+                            <select value={subject} onChange={e => setSubject(e.target.value)} disabled={session.isActive} className="bg-transparent border border-amber-500/30 rounded px-2 py-1 text-sm outline-none">
+                                {['國文','英文','數學','社會','自然','體育','藝術'].map(s => <option key={s} value={s} className="bg-slate-900">{s}</option>)}
+                            </select>
+                        </div>
+                        <div className="flex items-center gap-6">
+                            <span className="font-mono text-xl text-amber-400 hidden md:inline">{currentTime.toLocaleTimeString('zh-TW', { hour12: false })}</span>
+                            <button onClick={() => {
+                                if (!session.isActive) {
+                                    setSession(p => ({ ...p, isActive: true, startTime: new Date() }));
+                                    log('MODE_CHANGE', '觀課開始');
+                                } else {
+                                    setSession(p => ({ ...p, isActive: false, endTime: new Date(), currentMode: null, currentAction: null }));
+                                    setShowSummary(true);
+                                }
+                            }} className={`flex items-center gap-2 px-6 py-2 rounded-full font-bold shadow-lg transition-transform active:scale-95 ${session.isActive ? 'rust-gradient' : 'klimt-gradient'}`}>
+                                {session.isActive ? <><StopIcon className="w-5 h-5"/>結束</> : <><StartIcon className="w-5 h-5"/>開始</>}
+                            </button>
+                        </div>
+                    </header>
+
+                    {/* Main Content */}
+                    <main className="flex-1 overflow-hidden p-4 md:p-6 grid grid-cols-1 md:grid-cols-12 gap-6">
+                        {/* Modes */}
+                        <div className="md:col-span-4 space-y-4">
+                            <h2 className="text-amber-500/80 text-xs font-bold tracking-widest uppercase mb-2">教學模式 (States)</h2>
+                            <div className="grid grid-cols-2 md:grid-cols-1 gap-3">
+                                {Object.values(TeachingMode).map(mode => (
+                                    <button key={mode} onClick={() => toggleMode(mode)} disabled={!session.isActive} className={`p-4 rounded-xl border transition-all text-left relative overflow-hidden ${session.currentMode === mode ? 'klimt-gradient border-amber-300' : 'bg-slate-900/50 border-white/5'} ${!session.isActive && 'opacity-30'}`}>
+                                        <div className="font-bold text-lg">{mode}</div>
+                                        <div className="font-mono text-2xl mt-2">{Math.floor(session.modeDurations[mode]/60)}:{String(session.modeDurations[mode]%60).padStart(2,'0')}</div>
+                                    </button>
+                                ))}
+                            </div>
+                        </div>
+                        {/* Actions & Logs */}
+                        <div className="md:col-span-8 flex flex-col gap-6 overflow-hidden">
+                            <div>
+                                <h2 className="text-amber-500/80 text-xs font-bold tracking-widest uppercase mb-2">教學行為 (Actions) <span className="text-[10px] lowercase italic opacity-50 ml-2">長按啟動計時</span></h2>
+                                <div className="grid grid-cols-3 md:grid-cols-5 gap-2">
+                                    {Object.values(TeachingAction).map(action => (
+                                        <button key={action} onMouseDown={() => handleActionStart(action)} onMouseUp={() => handleActionEnd(action)} onTouchStart={() => handleActionStart(action)} onTouchEnd={() => handleActionEnd(action)} disabled={!session.isActive} className={`p-2 rounded-lg border flex flex-col items-center transition-all ${session.currentAction === action ? 'bg-blue-600 border-blue-400 animate-pulse' : 'bg-slate-900 border-white/10'} ${!session.isActive && 'opacity-30'}`}>
+                                            <span className="text-[10px] font-bold text-center">{action}</span>
+                                            <span className="text-xl font-mono">{session.actionCounts[action]}</span>
+                                            <span className="text-[10px] opacity-60">{Math.floor(session.actionDurations[action]/60)}:{String(session.actionDurations[action]%60).padStart(2,'0')}</span>
+                                        </button>
+                                    ))}
+                                </div>
+                            </div>
+                            <div className="flex-1 flex flex-col overflow-hidden">
+                                <h2 className="text-amber-500/80 text-xs font-bold tracking-widest uppercase mb-2">紀錄流 (Log)</h2>
+                                <div className="flex-1 glass-panel rounded-xl p-3 overflow-y-auto flex flex-col-reverse font-mono text-xs gap-1">
+                                    {session.logs.map(l => (
+                                        <div key={l.id} className="opacity-80 border-b border-white/5 py-1">
+                                            <span className="text-amber-500">[{l.timestamp.toLocaleTimeString('zh-TW',{hour12:false})}]</span> {l.label}
+                                        </div>
+                                    ))}
+                                </div>
+                            </div>
+                        </div>
+                    </main>
+
+                    {/* Footer */}
+                    <footer className={`h-16 px-6 glass-panel border-t border-amber-500/20 flex items-center justify-between shrink-0 transition-all ${isIdle ? 'idle-alert' : ''}`}>
+                        <div className="flex gap-2">
+                            {['LOW','MID','HIGH'].map(lvl => (
+                                <button key={lvl} onClick={() => log('ENGAGEMENT', `專注度: ${lvl}`, lvl)} disabled={!session.isActive} className={`px-4 py-1 rounded text-xs font-bold ${session.engagement === lvl ? 'bg-amber-500 text-black' : 'bg-white/5'} ${!session.isActive && 'opacity-30'}`}>{lvl}</button>
+                            ))}
+                        </div>
+                        <input type="text" placeholder="快速備註..." onKeyDown={e => { if(e.key === 'Enter' && e.target.value.trim()){ log('NOTE', '備註', e.target.value); e.target.value = ''; }}} disabled={!session.isActive} className="flex-1 max-w-lg mx-6 bg-white/5 border border-white/10 rounded px-4 py-1 text-sm outline-none focus:border-amber-500 transition-colors" />
+                    </footer>
+
+                    {showSummary && <SummaryModal session={session} subject={subject} onClose={() => setShowSummary(false)} onReset={() => window.location.reload()} />}
+                </div>
+            );
+        };
+
+        const root = ReactDOM.createRoot(document.getElementById('root'));
+        root.render(<App />);
+    </script>
 </body>
 </html>
